<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".MyProfile">


    <LinearLayout
        android:id="@+id/M_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="50dp">




        <ImageView
            android:id="@+id/back_profile"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="50dp"
            android:layout_height="35dp"

            app:srcCompat="?attr/actionModeCloseDrawable" />


    </LinearLayout>


    <ScrollView
        android:layout_below="@id/M_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">




<LinearLayout

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">









    <LinearLayout
        android:layout_below="@+id/M_bar"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="350dp"
android:layout_marginLeft="0dp"
            android:layout_height="250dp"
            android:src="@drawable/adugamayuba" />


        <TextView

            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="Abel Adugam Ayuba"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />





        <LinearLayout

            android:layout_marginTop="90dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/mtrack"
                android:text="@string/track"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:id="@+id/Value_mtrack"
                android:text="@string/Value_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>







        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





            <TextView
                android:textColor="@color/black"
                android:id="@+id/country"
                android:text="@string/country"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <TextView
                android:textColor="@color/black"
                android:id="@+id/Value_country"
                android:text="@string/Value_country"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:id="@+id/memail"
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:id="@+id/Value_memail"
                android:text="@string/Value_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_weight="1"
                android:textColor="@color/black"
                android:id="@+id/mphone_number"
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="1"
                android:textColor="@color/black"
                android:id="@+id/Value_mphone_number"
                android:text="@string/Value_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>




        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/slack_username"
                android:id="@+id/mslack_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_weight="1"
                android:text="@string/Value_slack_username"
                android:id="@+id/Value_mslack_username"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </LinearLayout>











    </LinearLayout>
</LinearLayout>


    </ScrollView>
</RelativeLayout>